# generation-x

./: .gitignore  README.md  pyproject.toml
src/generation_x/: __init__.py  __main__.py  app.py  config.py  elektron_cycles.py  generators.py  machine_jam.py  midi_data.py  models.py  music_utils.py  sequencer.py
